pep8 to install only required packages
This commits updates pep8 to install only required packages
ref: I0596a6970725189fd9b46a0cac923b86ccb03f8c

Change-Id: Ie6cda130233f93c940b1c6ae085cda7b80df061e

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,10 @@ deps = -r{toxinidir}/requirements.txt
 commands = python manage.py test {posargs} --settings=congress_dashboard.test.settings
 
 [testenv:pep8]
-commands = flake8 {posargs}
+usedevelop = False
+deps =
+commands = {toxinidir}/tools/pip-install-single-req.sh test-requirements.txt hacking
+           flake8
 
 [testenv:venv]
 commands = {posargs}
@@ -33,6 +36,7 @@ commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasen
 
 [flake8]
 exclude = .venv,.git,.tox,dist,*lib/python*,*egg,build,node_modules
+show-source = True
 
 [hacking]
 import_exceptions = collections.defaultdict,
