--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,5 @@ django-babel>=0.5.1 # BSD
 django_compressor>=2.0  # MIT
 django-nose>=1.4.4  # BSD
 django_openstack_auth>=3.1.0  # Apache-2.0
+keystoneauth1>=2.20.0 # Apache-2.0
 python-congressclient>=1.3.0,<2000  # Apache-2.0
