--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,10 @@ classifier =
 packages =
     congress_dashboard
 
+[pbr]
+autodoc_index_modules = True
+warnerrors = True
+
 [build_sphinx]
 all_files = 1
 build-dir = doc/build
