--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,6 @@ exclude .gitignore
 exclude .gitreview
 include setup.py
 
-recursive-include ironic_ui *.js *.html *.scss
+recursive-include congress_dashboard *.js *.html *.scss
 
 global-exclude *.pyc
