--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ classifier =
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
-    programming Language :: python :: 3.5
+    Programming Language :: Python :: 3.5
 
 [files]
 packages =
