--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,10 @@
 # be installed in a specific order.
 #
 # PBR should always appear first
-pbr>=2.0.0 # Apache-2.0
-Django>=1.8,<1.9  # BSD
-django-babel>=0.5.1 # BSD
-django_compressor>=2.0  # MIT
+pbr>=2.0.0,!=2.1.0  # Apache-2.0
+Django>=1.8,<2.0  # BSD
+django-babel>=0.5.1  # BSD
+django-compressor>=2.0  # MIT
 django-nose>=1.4.4  # BSD
-django_openstack_auth>=3.1.0  # Apache-2.0
-keystoneauth1>=2.20.0 # Apache-2.0
-python-congressclient>=1.3.0,<2000  # Apache-2.0
+keystoneauth1>=3.3.0  # Apache-2.0
+python-congressclient>=1.9.0,<2000  # Apache-2.0
