--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,10 @@ skipsdist = True
 [testenv]
 usedevelop = True
 setenv = VIRTUAL_ENV={envdir}
-install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} -U {opts} {packages}
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
+deps =
+  -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt}
+  -r{toxinidir}/requirements.txt
+  -r{toxinidir}/test-requirements.txt
 commands = python manage.py test {posargs} --settings=congress_dashboard.test.settings
 
 [testenv:pep8]
@@ -60,3 +61,10 @@ import_exceptions = collections.defaultdict,
                     django.utils.translation.ungettext_lazy,
                     operator.attrgetter,
                     StringIO.StringIO
+
+[testenv:lower-constraints]
+basepython = python3
+deps =
+  -c{toxinidir}/lower-constraints.txt
+  -r{toxinidir}/test-requirements.txt
+  -r{toxinidir}/requirements.txt
