--- a/tox.ini
+++ b/tox.ini
@@ -30,9 +30,12 @@ commands =
 
 [testenv:docs]
 setenv = DJANGO_SETTINGS_MODULE=congress_dashboard.test.settings
-commands = python setup.py build_sphinx
+deps = -r{toxinidir}/doc/requirements.txt
+commands =
+  sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:releasenotes]
+deps = -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
 [flake8]
