--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@
 #
 # PBR should always appear first
 pbr!=2.1.0,>=2.0.0 # Apache-2.0
-Django<2.0,>=1.11 # BSD
+Django<2,>=1.11;python_version<'3.0' # BSD
+Django<2.1,>=1.11;python_version>='3.0' # BSD
 django-babel>=0.6.2 # BSD
 django-compressor>=2.0 # MIT
 django-nose>=1.4.4 # BSD
