--- a/tox.ini
+++ b/tox.ini
@@ -13,15 +13,18 @@ deps =
 commands = python manage.py test {posargs} --settings=congress_dashboard.test.settings
 
 [testenv:pep8]
+basepython = python3
 usedevelop = False
 deps =
 commands = {toxinidir}/tools/pip-install-single-req.sh test-requirements.txt hacking
            flake8
 
 [testenv:venv]
+basepython = python3
 commands = {posargs}
 
 [testenv:cover]
+basepython = python3
 commands =
   coverage erase
   coverage run {toxinidir}/manage.py test congress_dashboard --settings=congress_dashboard.test.settings {posargs} --exclude-dir=congress_dashboard/test/integration_tests {posargs}
@@ -29,12 +32,14 @@ commands =
   coverage html --omit '.tox/cover/*' -d 'cover/htmlcov'
 
 [testenv:docs]
+basepython = python3
 setenv = DJANGO_SETTINGS_MODULE=congress_dashboard.test.settings
 deps = -r{toxinidir}/doc/requirements.txt
 commands =
   sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:releasenotes]
+basepython = python3
 deps = -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
