Modify the 'tox.ini' file
Since the horizon remove the 'run_tests.sh' file,
so there should remove '.venv' from the flake8 exclude
in the '.tox.ini' file.

Change-Id: Ief1d67e3d387590ef86e2abc45139f69d69912e3

--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,7 @@ deps = -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
 [flake8]
-exclude = .venv,.git,.tox,dist,*lib/python*,*egg,build,node_modules
+exclude = .git,.tox,dist,*lib/python*,*egg,build,node_modules
 show-source = True
 
 [hacking]
