--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ summary = Horizon Plugin for Congress
 description-file =
     README.rst
 author = OpenStack
-author-email = openstack-dev@lists.openstack.org
+author-email = openstack-discuss@lists.openstack.org
 home-page = https://github.com/openstack/congress-dashboard
 classifier =
     Environment :: OpenStack
