--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,9 @@ deps = -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
 [flake8]
+# F405 TEMPLATES may be undefined, or defined from star imports
+# (because it is not easy to avoid this in openstack_dashboard.test.settings)
+ignore = F405
 exclude = .git,.tox,dist,*lib/python*,*egg,build,node_modules
 show-source = True
 
