tox: Keeping going with docs
Sphinx 1.8 introduced [1] the '--keep-going' argument which, as its name
suggests, keeps the build running when it encounters non-fatal errors.
This is exceptionally useful in avoiding a continuous edit-build loop
when undertaking large doc reworks where multiple errors may be
introduced.

[1] https://github.com/sphinx-doc/sphinx/commit/e3483e9b045

Change-Id: Ifa044174c197f10c88947865508379c5b53c6090

--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ basepython = python3
 setenv = DJANGO_SETTINGS_MODULE=congress_dashboard.test.settings
 deps = -r{toxinidir}/doc/requirements.txt
 commands =
-  sphinx-build -W -b html doc/source doc/build/html
+  sphinx-build -W --keep-going -b html doc/source doc/build/html
 
 [testenv:pdf-docs]
 basepython = python3
@@ -48,13 +48,14 @@ deps = {[testenv:docs]deps}
 whitelist_externals =
   make
 commands =
-  sphinx-build -W -b latex doc/source doc/build/pdf
+  sphinx-build -W --keep-going -b latex doc/source doc/build/pdf
   make -C doc/build/pdf
 
 [testenv:releasenotes]
 basepython = python3
 deps = -r{toxinidir}/doc/requirements.txt
-commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
+commands =
+  sphinx-build -a -E -W -d releasenotes/build/doctrees --keep-going -b html releasenotes/source releasenotes/build/html
 
 [flake8]
 # F405 TEMPLATES may be undefined, or defined from star imports
