--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,7 @@
 #
 # PBR should always appear first
 pbr!=2.1.0,>=2.0.0 # Apache-2.0
-Django<2,>=1.11;python_version<'3.0' # BSD
-Django<2.1,>=1.11;python_version>='3.0' # BSD
+Django>=1.11;python_version>='3.0' # BSD
 django-babel>=0.6.2 # BSD
 django-compressor>=2.0 # MIT
 keystoneauth1>=3.4.0 # Apache-2.0
