--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37,py36,py3-{dj111,dj22},pep8
+envlist = py37,py36,pep8
 minversion = 2.0
 skipsdist = True
 
@@ -11,8 +11,6 @@ deps =
   -r{toxinidir}/requirements.txt
   -r{toxinidir}/test-requirements.txt
 commands =
-  dj111: pip install django>=1.11,<2
-  dj22: pip install django>=2.2,<2.3
   python manage.py test {posargs} --settings=congress_dashboard.test.settings
 
 [testenv:pep8]
